--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "main": "index.js",
   "homepage": "https://thuhale2210.github.io/Portfolio-website/",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./bin/www"
-
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
+  "keywords": [
+    "heroku",
+    "express",
+    "node"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -18,11 +20,15 @@
     "compression": "^1.7.4",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "heroku": "^8.4.3",
     "jquery": "^3.7.1",
     "method-override": "^3.0.0",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
     "gh-pages": "^6.0.0"
+  },
+  "engines": {
+    "node": "18.x"
   }
 }
